--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_list_class">ListClass</string>
     <string name="title_activity_list_items">ListItems</string>
+    <string name="title_activity_adapter">Adapter</string>
 </resources>
